--- a/api/grpc/document_api/Makefile
+++ b/api/grpc/document_api/Makefile
@@ -1,6 +1,7 @@
 gen:
 	protoc -I proto proto/document.proto \
 	--go_out=./gen/go --go_opt=paths=source_relative \
-	--go-grpc_out=./gen/go --go-grpc_opt=paths=source_relative
+	--go-grpc_out=./gen/go --go-grpc_opt=paths=source_relative \
+	--experimental_allow_proto3_optional
 
 .PHONY: gen
