--- a/users/configs/config_test.yml
+++ b/users/configs/config_test.yml
@@ -1,7 +1,8 @@
 env: "local"
+logpath: "./internal/logger/logfiles/test-users.log"
 db:
-   host: "user_db"
-   port: "5432"
+   host: "localhost"
+   port: "5436"
    username: "david"
    dbname: "user_db_test"
    sslmode: "disable"
