--- a/authorization/configs/config_test.yml
+++ b/authorization/configs/config_test.yml
@@ -1,4 +1,5 @@
 env: "local"
+logpath: "./internal/logger/logfiles/test-authorization.log"
 
 token_ttl: 1h
 grpc:
@@ -6,7 +7,7 @@ grpc:
   timeout: 10h
 
 user_client:
-   address: "users-api:4041"
+   address: "localhost:4041"
    timeout: 10h
    retries_count: 5
 
