--- a/documents/putlists/Dockerfile
+++ b/documents/putlists/Dockerfile
@@ -14,6 +14,7 @@ WORKDIR /root/
 COPY --from=builder /github.com/DavidG9999/DMS/documents/putlists/bin/putlists .
 COPY --from=builder /github.com/DavidG9999/DMS/documents/putlists/configs configs/
 COPY --from=builder /github.com/DavidG9999/DMS/documents/putlists/.env .
+COPY --from=builder /github.com/DavidG9999/DMS/documents/putlists/internal/logger/logfiles var/log
 
 EXPOSE 4042
 
