--- a/documents/putlists/configs/config_test.yml
+++ b/documents/putlists/configs/config_test.yml
@@ -1,7 +1,8 @@
 env: "local"
+logpath: "./internal/logger/logfiles/test-putlists.log"
 db:
-   host: "putlist_db"
-   port: "5432"
+   host: "localhost"
+   port: "5436"
    username: "david"
    dbname: "document_db_test"
    sslmode: "disable"
